# DILAB

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  PLAN.MD  README.md  skills-lock.json
ai-worker/: .env.example  .gitignore  README.md  pyproject.toml
ai-worker/scripts/: ask.py  compute_ratings.py  ingest_naver.py  ingest_seed.py  label_chunks.py  run_topics.py  verify_rag.py
ai-worker/src/: config.py  main.py
ai-worker/src/analysis/: __init__.py  label.py
ai-worker/src/compare/: __init__.py  insights.py
ai-worker/src/db/: __init__.py  supabase.py
ai-worker/src/embeddings/: __init__.py  bge.py
ai-worker/src/ingestion/: __init__.py  auto_ingest.py  chunking.py  naver_fetcher.py  naver_loader.py  naver_pipeline.py  pipeline.py  seed_loader.py  slug.py
ai-worker/src/llm/: __init__.py  deepseek.py
ai-worker/src/rag/: __init__.py  answer.py
ai-worker/src/ratings/: __init__.py  compute.py
ai-worker/src/topics/: __init__.py  bertopic_runner.py
benchmark/: sources.md  syncly-benchmark.md
benchmark/research-notes/: task-a.md  task-b.md  task-c.md  task-d.md  task-e.md
docs/: AGENT_HANDOFF.md  AGENT_WORKFLOW.md  CLAUDE_CODE_SETUP.md  DEPLOYMENT_PLAN.md  HOW_IT_WORKS.md  OPERATIONS.md
docs/db/: schema.md
docs/design/: prototype-plan.md  syncly-info-architecture.md
docs/prd/: dilab-mvp-prd.md
docs/research/: tech-stack-decision.md
modal_app/: README.md  analyze.py
prototype/: .env.local.example  AGENTS.md  package-lock.json  package.json  wrangler.jsonc
prototype/app/: globals.css  layout.tsx  page.tsx
refactoring/: refactoring.md
(+42 files in other folders)
